hover was changed, form reload issues were corrected, z-index was added, target blank was added to some links

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -58,6 +58,11 @@
 
   &__button {
     margin-bottom: 120px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 22px;
+    color: $white;
 
     @include onPhone {
       margin-bottom: 80px;
