--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,6 @@
 .menu {
   background-color: $dark-grey;
+  z-index: 10;
 
   &__content {
     height: 100vh;
