--- a/src/styles/blocks/vision.scss
+++ b/src/styles/blocks/vision.scss
@@ -52,6 +52,10 @@
     grid-row: 3 / 4;
     margin: 0 0 200px;
 
+    &:hover {
+      background-color: $dark-grey;
+    }
+
     @include onLaptop {
       grid-column: 2 / 12;
     }
@@ -63,6 +67,12 @@
     @include onPhone {
       grid-column: 1 / 3;
       margin: 0;
+    }
+  }
+
+  &__link {
+    &:hover {
+      color: $white;
     }
   }
 
